Skip to content

Problem on mouse scrolling

On Apple systems it is possible to scroll (by mouse) both horizontally and vertically. Horizontal scroll works on the movie cursor position. Vertical scroll acts on volume fader.

The problem is that is it very easy to wrongly scroll on two axis simultaneously (above all using notebook trackpad or a physical mouse).

So during playing, for example, when user is raising the volume, it run back a pieace of movie. Etc... It's very annoying.

My question is: is it possible to lock the scroll axis at each time?

So when user starts scrolling on x-axis (and working on position) it has to end that operation before start to scroll on y-axis (and working on volume). And viceversa.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information